# digital-assistant

./: CMakeLists.txt  README.md  download-gsl.txt.in  download-imgui.txt.in  download-sfml.txt.in
cmake/: clone-GSL.cmake  clone-imgui.cmake  clone-sfml.cmake  formatting.cmake  subproject.cmake
src/: digitalassistant.cpp  no-warn-imgui.hpp
